--- a/admin/css/wbb-ocm-admin.css
+++ b/admin/css/wbb-ocm-admin.css
@@ -165,31 +165,74 @@
 
 .wbb_ocm_status_block div{
     display: inline-block;
-    vertical-align: top;
 }
 
 .wbb_checkbox{
-    background-color: lightgray;
-    border-radius: 15px;
+    background-color: #f0f0f0;
+    border-radius: 3px;
     border: 1px solid darkgrey;
-    height: 15px;
-    width: 30px;
+    height: 25px;
+    width: 75px;
     cursor: pointer;
+    
+    font-size: 1.15em;
+    word-spacing: 20px;
+    padding: 3px 3px 0px 7px;
+    color: white;
 }
 
 .wbb_checkbox span{
-    width: 15px;
-    height: 15px;
-    display: block;
-    border-radius: 50%;
-    
-    background-color: darkred;
     transition: 0.25s linear;
 }
 
-.wbb_checkbox span.activated{
-    background-color: greenyellow;
-    margin-left: 14px;
+.wbb_checkbox span.on{
+    color: #333;
+}
+.wbb_checkbox span.off{
+    color: white;
+}
+.wbb_checkbox.activated span.on{
+    color: white;
+}
+.wbb_checkbox.activated span.off{
+    color: #333;
+}
+
+.wbb_checkbox span.indicator{
+    width: 44px;
+    height: 29px;
+    display: block;
+    border-radius: 2px;
+    margin: -21px 0px 0px 35px;
+    
+    background: #8d8d8d; /* Old browsers */
+    background: -moz-linear-gradient(top, #8d8d8d 0%, #676767 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8d8d8d), color-stop(100%,#676767)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #8d8d8d 0%,#676767 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #8d8d8d 0%,#676767 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #8d8d8d 0%,#676767 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #8d8d8d 0%,#676767 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8d8d8d', endColorstr='#676767',GradientType=0 ); /* IE6-9 */
+}
+
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8d8d8d+0,676767+100 */
+
+
+
+.wbb_checkbox.activated span.indicator{
+    
+    margin: -21px 0px 0px -8px;
+    
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#008ec1+0,0675a2+100 */
+background: #008ec1; /* Old browsers */
+background: -moz-linear-gradient(top,  #008ec1 0%, #0675a2 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#008ec1), color-stop(100%,#0675a2)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #008ec1 0%,#0675a2 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #008ec1 0%,#0675a2 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #008ec1 0%,#0675a2 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #008ec1 0%,#0675a2 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#008ec1', endColorstr='#0675a2',GradientType=0 ); /* IE6-9 */
+
 }
 
 .wbb_ocm_status_result{
@@ -197,3 +240,5 @@
     font-size: 1.5em;
     margin-left: 10px;
 }
+
+
