--- a/admin/css/wbb-ocm-admin.css
+++ b/admin/css/wbb-ocm-admin.css
@@ -38,7 +38,7 @@
     font-weight: bold;
     margin-bottom: 10px;
     margin-top: 25px;
-
+    padding-right: 15px;
 }
 
 .wbb_ocm_settings_container label{
@@ -102,7 +102,7 @@
 .wbb_ocm_trigger_icon_list{
     padding: 0px;
     margin: 0px;
-    width: 300px;
+    width: 316px;
 }
 
 .wbb_ocm_trigger_icon_list li:nth-child(5)
@@ -118,6 +118,7 @@
     margin-right: 15px;
     padding: 5px;
     opacity: 0.45;
+    border: 2px solid #FFF;
 }
 
 .wbb_ocm_trigger_icon_list li.active{
